RESOLVED FIXED134196
REGRESSION (r160908): Unable to unset bold while entering text
https://bugs.webkit.org/show_bug.cgi?id=134196
Summary REGRESSION (r160908): Unable to unset bold while entering text
Antti Koivisto
Reported 2014-06-23 09:44:27 PDT
...with some wk1 clients.
Attachments
patch (6.27 KB, patch)
2014-06-23 09:51 PDT, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2014-06-23 09:44:58 PDT
Antti Koivisto
Comment 2 2014-06-23 09:51:43 PDT
Andreas Kling
Comment 3 2014-06-23 09:57:27 PDT
Comment on attachment 233612 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=233612&action=review r=me bro. Another lazy style regression down! > Source/WebCore/editing/Editor.h:493 > + static RenderStyle* styleForSelectionStart(Frame* , Node *&nodeToRemove); Disturbing * and & placements here.
Antti Koivisto
Comment 4 2014-06-23 10:03:20 PDT
Note You need to log in before you can comment on or make changes to this bug.