REGRESSION (r160908): Unable to unset bold while entering text https://bugs.webkit.org/show_bug.cgi?id=134196 <rdar://problem/17051653>

Reviewed by Andreas Kling.

No test, this code path is used by some WK1 API clients only.

* editing/Editor.cpp:
(WebCore::Editor::styleForSelectionStart):

    This needs to update the style before requesting the renderer.

* editing/Editor.h:
* editing/ios/EditorIOS.mm:
(WebCore::styleForSelectionStart): Deleted.
* editing/mac/EditorMac.mm:
(WebCore::styleForSelectionStart): Deleted.

    Removed the duplicated functions, moved to Editor.cpp.



Canonical link: https://commits.webkit.org/152155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170296 268f45cc-cd09-0410-ab3c-d52691b4dbfc